*******************************************************************************
* RECENT CHANGES
*******************************************************************************

=== 1.0.30 ===
* Added audio pre-mixing controls.
* Added left/right and mid/side linking in the UI.

=== 1.0.29 ===
* Added overlay support for Sidechain and Mix.
* Updated build scripts and dependencies.

=== 1.0.28 ===
* Updated build scripts and dependencies.

=== 1.0.27 ===
* Updated build scripts and dependencies.

=== 1.0.26 ===
* Fixed compilation on modern compilers.
* Updated build scripts and dependencies.

=== 1.0.25 ===
* Added support of sidechain passed by shared memory link.
* Updated build scripts and dependencies.

=== 1.0.24 ===
* Updated build scripts and dependencies.

=== 1.0.23 ===
* Updated build scripts and dependencies.

=== 1.0.22 ===
* Updated build scripts and dependencies.

=== 1.0.21 ===
* Implemented Hold option.
* Implemented Dry/Wet balance knob.
* Updated build scripts and dependencies.

=== 1.0.20 ===
* Threshold markers are now editable.
* Updated build scripts and dependencies.

=== 1.0.19 ===
* Updated build scripts and dependencies.

=== 1.0.18 ===
* Updated build scripts and dependencies.

=== 1.0.17 ===
* Updated build scripts and dependencies.

=== 1.0.16 ===
* Implemented Stereo Split mode for stereo versions of plugins.
* Updated build scripts and dependencies.

=== 1.0.15 ===
* Updated build scripts and dependencies.

=== 1.0.14 ===
* Updated build scripts and dependencies.

=== 1.0.13 ===
* Updated build scripts and dependencies.

=== 1.0.12 ===
* Updated build scripts and dependencies.

=== 1.0.11 ===
* Fixed invalid version number in metadata.

=== 1.0.10 ===
* Updated build scripts and dependencies.

=== 1.0.9 ===
* Updated build scripts and dependencies.

=== 1.0.8 ===
* Added 'Min' and 'Max' sidechain sources for the gate.
* Updated build scripts and dependencies.

=== 1.0.7 ===
* Updated build scripts and dependencies.